--- a/gk.bib
+++ b/gk.bib
@@ -4248,25 +4248,28 @@ howpublished = {NBER}
 }
 
 @inbook{GerGreKap04,
-	author={Alan S. Gerber and Donald P. Green and Edward H. Kaplan},
-	title={The illusion of learning from observational research},
-	chapter={12},
-	year={2004},
-	publisher={Cambridge University Press},
-	pages={251-273},
-	address={Cambridge, United Kingdom},
-	editor={Ian Shapiro and Rogers M. Smith and Tarek e. Masoud}
+  author =       {Alan S. Gerber and Donald P. Green and Edward H.
+                  Kaplan},
+  title =        {The illusion of learning from observational
+                  research},
+  chapter =      {12},
+  year =         {2004},
+  publisher =    {Cambridge University Press},
+  pages =        {251-273},
+  address =      {Cambridge, United Kingdom},
+  editor =       {Ian Shapiro and Rogers M. Smith and Tarek e. Masoud}
 }
 
 @article{GerSchFra94,
-	author={Gerner, Deborah J. and Philip A. Schrodt and Ronald A. Francisco and Judith
-		L. Weddle},
-	title={{Machine Coding of Event Data Using Regional and International Sources}},
-	journal={International Studies Quarterly},
-	volume={38},
-	year={1994},
-	pages={91-119},
-	number={1}
+  author =       {Gerner, Deborah J. and Philip A. Schrodt and Ronald
+                  A. Francisco and Judith L. Weddle},
+  title =        {{Machine Coding of Event Data Using Regional and
+                  International Sources}},
+  journal =      {International Studies Quarterly},
+  volume =       {38},
+  year =         {1994},
+  pages =        {91-119},
+  number =       {1}
 }
 
 @unpublished{Gertler00,
@@ -11089,7 +11092,7 @@ pages={706-719}
 	note={Dept. of Sociology \& Anthropology and Department of Political Science;
 		The Hebrew University of Jerusalem; Israel 91905},
 	year={2005},
-	month={July}
+	month=7
 }
 
 @book{Shannon49,
@@ -11107,7 +11110,7 @@ pages={706-719}
 	volume={91},
 	year={1996},
 	pages={1278-1288},
-	month={September},
+	month=9,
 	number={435}
 }
 
@@ -11130,7 +11133,7 @@ pages={706-719}
 	volume= 58,
 	year= 1993,
 	pages={159--194},
-	month={June},
+	month=6,
 	number= 2
 }
 
@@ -11211,7 +11214,7 @@ pages={706-719}
 	title={Strategic Misspecification in Discrete Choice Models},
 	journal= ajps,
 	year={2003},
-	month={July},
+	month=7,
 	note={{http://www.rochester.edu/College/PSC/signorino/papers/Signo00.pdf}}
 }
 
@@ -11222,7 +11225,7 @@ pages={706-719}
 	volume={99},
 	year={2005},
 	pages={623-631},
-	month={November},
+	month=11,
 	number={4}
 }
 
@@ -11261,7 +11264,7 @@ pages={706-719}
 	volume= 100,
 	year= 2005,
 	pages={1077--1089},
-	month={September},
+	month=9,
 	number= 471
 }
 
@@ -11283,7 +11286,7 @@ pages={706-719}
 	volume={54},
 	year={1992},
 	pages={793-809},
-	month={August},
+	month=8,
 	number={3}
 }
 
@@ -11315,7 +11318,7 @@ pages={706-719}
 	note={Dept. of Statistics, The Wharton School of the University of Pennsylvania,
 		Philadelphia, PA 19104-6340, dmall@wharton.upenn.edu},
 	year={2005},
-	month={September}
+	month=9
 }
 
 @book{SmiMor91,
@@ -11391,7 +11394,7 @@ pages={706-719}
 	volume= 22,
 	year= 1996,
 	pages={377-399},
-	month={August}
+	month=8
 }
 
 @article{Sobel06,
@@ -11401,7 +11404,7 @@ pages={706-719}
 	volume={35},
 	year={2006},
 	pages={99-33},
-	month={June},
+	month=6,
 	number={1}
 }
 
@@ -11512,7 +11515,7 @@ pages={706-719}
 	title={Understanding the Political Influence of Blogs},
 	institution={Graduate School of Political Management, George Washington University},
 	year={2006},
-	month={April},
+	month=4,
 	address={The Institue for Politics, Democracy, & the Internet, Graduate School of
 		Political Management, George Washington U, 805 21st St., NW Suite 401,
 		Washington, DC 20052}
@@ -11557,7 +11560,7 @@ pages={706-719}
 	volume={90},
 	year={1995},
 	pages={1247-1256},
-	month={December},
+	month=12,
 	number={432}
 }
 
@@ -11575,7 +11578,7 @@ pages={706-719}
 	volume={46},
 	year={1992},
 	pages={110-114},
-	month={May},
+	month=5,
 	number={2}
 }
 
@@ -11587,7 +11590,7 @@ pages={706-719}
 	volume= 38,
 	year= 2000,
 	pages={II-102 -- II-124},
-	month={September},
+	month=9,
 	number= 9
 }
 
@@ -11696,7 +11699,7 @@ pages={706-719}
 	volume={18},
 	year={1990},
 	pages={395-415},
-	month={May}
+	month=5
 }
 
 @article{StoWat03,
@@ -11706,7 +11709,7 @@ pages={706-719}
 	year={2003},
 	optnumber={3},
 	optvolume={41},
-	optmonth={September}
+	optmonth=9
 }
 
 @article{StoWay98,
@@ -11776,7 +11779,7 @@ pages={706-719}
 	journal={National Health Policy Forum Issue Brief},
 	year={2004},
 	pages={1-20},
-	month={May},
+	month=5,
 	number={797},
 	note={The George Washinton University, Washington, DC},
 	institution={National Health Policy Form}
@@ -11859,7 +11862,7 @@ pages={706-719}
 	volume={82},
 	year={1987},
 	pages={528-550},
-	month={June}
+	month=6
 }
 
 @article{Taylor92,
@@ -11904,7 +11907,7 @@ pages={706-719}
 	journal= apsr,
 	volume= 95,
 	year= 2001,
-	month={December},
+	month=12,
 	number= 4
 }
 
@@ -11924,7 +11927,7 @@ pages={706-719}
 	volume= 43,
 	year= 1999,
 	pages={335-366},
-	month={April},
+	month=4,
 	number= 2
 }
 
@@ -12119,7 +12122,7 @@ pages={706-719}
   volume =	 {51},
   year =	 {1986},
   pages =	 {251-267},
-  month =	 {June},
+  month =	 6,
   number =	 {2}
 }
 
@@ -12140,7 +12143,7 @@ pages={706-719}
   title =	 {Bayesian Inference for Bioassay},
   institution =	 {University of Missouri - Columbia},
   year =	 {1975},
-  month =	 {August},
+  month =	 8,
   number =	 {52}
 }
 
@@ -12162,7 +12165,7 @@ pages={706-719}
   volume =	 {15},
   year =	 {1992},
   pages =	 {229-233},
-  month =	 {October}
+  month =	 10
 }
 
 @article{Tsutakawa92b,
@@ -12201,7 +12204,7 @@ pages={706-719}
   volume =	 405,
   year =	 2000,
   pages =	 {789--792},
-  month =	 {June}
+  month =	 6
 }
 
 @article{tumbarello98,
@@ -12222,7 +12225,7 @@ pages={706-719}
   title =	 {Unsupervised Learning of Semantic Orientation},
   note =	 {National Research Council Canada},
   year =	 {2002},
-  month =	 {May}
+  month =	 5
 }
 
 @article{TurMat01,
@@ -12253,7 +12256,7 @@ pages={706-719}
   volume =	 {42},
   year =	 {2005},
   pages =	 {417-434},
-  month =	 {July},
+  month =	 7,
   number =	 {4},
   publisher =	 {Journal for Peace Research}
 }
@@ -12424,7 +12427,7 @@ pages={706-719}
   volume =	 55,
   year =	 1995,
   pages =	 {801--821},
-  month =	 {December},
+  month =	 12,
   number =	 4
 }
 
@@ -12616,7 +12619,7 @@ pages={706-719}
 	volume={353},
 	year={2005},
 	pages={2335-2341},
-	month={December}
+	month=12
 }
 
 @article{WanSha91,
@@ -12671,7 +12674,7 @@ pages={706-719}
 	volume={42},
 	year={2005},
 	pages={435-454},
-	month={July},
+	month=7,
 	number={4}
 }
 
@@ -12680,7 +12683,7 @@ pages={706-719}
 	title={Everybody Out of the Pool!},
 	note={Michael Ward, Dept of Politcal Science, Univ of WA, Seattle mdw@u.washington.edu},
 	year={2005},
-	month={August}
+	month=8
 }
 
 @techreport{WasRoe06,
@@ -12688,7 +12691,7 @@ pages={706-719}
 	title={Weighted Hypothesis Testing},
 	institution={Carnegie Mellon University},
 	year={2006},
-	month={April}
+	month=4
 }
 
 @article{Weibe04,
@@ -12738,7 +12741,7 @@ pages={706-719}
 	volume={85},
 	year={1990},
 	pages={699-704},
-	month={September}
+	month=9
 }
 
 @article{WeiWanIbr97,
@@ -12749,7 +12752,7 @@ pages={706-719}
 	volume= 53,
 	year= 1997,
 	pages={592--602},
-	month={June}
+	month=6
 }
 
 @article{Wellhofer03,
@@ -12771,7 +12774,7 @@ pages={706-719}
 	volume= 53,
 	year= 2000,
 	pages={343--374},
-	month={June}
+	month=6
 }
 
 @article{Wernette1977,
@@ -12820,7 +12823,7 @@ pages={706-719}
 	volume= 42,
 	year= 1998,
 	pages={1233--1259},
-	month={October},
+	month=10,
 	number= 4
 }
 
@@ -12880,7 +12883,7 @@ pages={706-719}
 	volume={48},
 	year={1980},
 	pages={817--838},
-	month={May},
+	month=5,
 	number={4}
 }
 
@@ -12925,7 +12928,7 @@ pages={706-719}
 	title={Identifying Collocations for Recognizing Opinions},
 	note={University of Pittsburgh wiebe, twilson, mbell@cs.pitt.edu},
 	year={2001},
-	month={April}
+	month=4
 }
 
 @article{WilBerNob01,
@@ -13026,7 +13029,7 @@ pages={706-719}
 	volume={23},
 	year={1994},
 	pages={230-257},
-	month={November},
+	month=11,
 	number={2}
 }
 
@@ -13064,7 +13067,7 @@ pages={706-719}
   volume =	 51,
   year =	 2002,
   pages =	 {245--255},
-  month =	 {April},
+  month =	 4,
   number =	 2
 }
 
@@ -13146,7 +13149,7 @@ pages={706-719}
                   deaths in China},
   journal =	 {International Journal of Epidemiology},
   year =	 {2005},
-  month =	 {September},
+  month =	 9,
   note =	 {Advance Access published 9/6/05
                   doi:10.1093/ije/dyi181}
 }
@@ -13286,7 +13289,7 @@ pages={706-719}
 	volume= 57,
 	year= 1962,
 	pages={348--368},
-	month={June},
+	month=6,
 	number= 298
 }
 
@@ -13307,7 +13310,7 @@ pages={706-719}
 	volume= 27,
 	year= 1999,
 	pages={499--524},
-	month={May},
+	month=5,
 	number= 4
 }
 
@@ -13360,7 +13363,7 @@ pages={706-719}
 	volume= 45,
 	year= 2001,
 	pages={470--490},
-	month={April}
+	month=4
 }
 
 @article{ZouTepSaa00,
@@ -13385,7 +13388,7 @@ pages={706-719}
   volume =	 {368},
   year =	 {2006},
   pages =	 {1828-41},
-  month =	 {November}
+  month =	 11
 }
 
 @article{KnaFre05,
@@ -13397,7 +13400,7 @@ pages={706-719}
   number =	 {6},
   year =	 {2005},
   pages =	 {1828-41},
-  month =	 {November}
+  month =	 11
 }
 
 @book{Turner79,
@@ -13500,7 +13503,7 @@ pages={706-719}
 	volume={29},
 	year={2001},
 	pages={1165-1188},
-	month={August},
+	month=8,
 	number={4}
 }
 
@@ -13559,7 +13562,7 @@ pages={706-719}
 	volume={47},
 	year={2003},
 	pages={333-347},
-	month={April},
+	month=4,
 	number={2}
 }
 
@@ -13597,7 +13600,7 @@ pages={706-719}
   volume =	 {34},
   year =	 {2001},
   pages =	 {587-621},
-  month =	 {August},
+  month =	 8,
   number =	 {6}
 }
 
@@ -13610,7 +13613,7 @@ pages={706-719}
   volume =	 {100},
   year =	 {2006},
   pages =	 {165-181},
-  month =	 {May},
+  month =	 5,
   number =	 {2}
 }
 
@@ -13622,7 +13625,7 @@ pages={706-719}
   volume =	 {57},
   year =	 {2005},
   pages =	 {530-567},
-  month =	 {July},
+  month =	 7,
   number =	 {4}
 }
 
@@ -13633,7 +13636,7 @@ pages={706-719}
 	volume={50},
 	year={2006},
 	pages={860-874},
-	month={October},
+	month=10,
 	number={4}
 }
 
@@ -13652,7 +13655,7 @@ pages={706-719}
 	volume={106},
 	year={1998},
 	pages={997-1032},
-	month={October},
+	month=10,
 	number={5}
 }
 
@@ -13663,7 +13666,7 @@ pages={706-719}
 	volume={49},
 	year={2005},
 	pages={483-507},
-	month={August},
+	month=8,
 	number={4}
 }
 
@@ -13674,7 +13677,7 @@ pages={706-719}
 	volume={56},
 	year={2004},
 	pages={563-595},
-	month={October},
+	month=10,
 	number={4}
 }
 
@@ -13696,7 +13699,7 @@ pages={706-719}
   volume =	 {49},
   year =	 {2005},
   pages =	 {564-576},
-  month =	 {July},
+  month =	 7,
   number =	 {3}
 }
 
@@ -13746,7 +13749,7 @@ pages={706-719}
   journal =	 {CID Development Discussion Paper 582},
   year =	 1997,
   pages =	 {1-37},
-  month =	 {July},
+  month =	 7,
 }
 @book{DjuMac75,
   title =	 {Alternative Approaches to Meeting Basic Health Needs
@@ -13784,7 +13787,7 @@ pages={706-719}
   year =	 1989,
   pages =	 {301-315},
   volume =	 4,
-  month =	 {July}
+  month =	 7
 }
 
 @book{KauNel04,
@@ -13804,7 +13807,7 @@ pages={706-719}
 	year= 2000,
 	pages={101-119},
         volume= 12,
-        month={July},
+        month=7,
 	
 }
 @article{LonFre97,
@@ -13814,7 +13817,7 @@ pages={706-719}
 	year=1997,
 	pages={1-36},
         volume= 41,
-        month={July},
+        month=7,
 	
 }
 
@@ -13824,7 +13827,7 @@ pages={706-719}
         journal={The World Bank Research Observer},
 	year=1995,
         volume= 10,
-        month={August},
+        month=8,
         pages={201-220},
         number= 2,
 }
@@ -14072,7 +14075,7 @@ pages={706-719}
   booktitle =	 {Proceedings of the Conference on Uncertainty in
                   Artificial Intelligence (UAI-94)},
   year =	 {1994},
-  month =	 {July},
+  month =	 7,
   address =	 {Seattle, WA},
 }
 
@@ -14388,7 +14391,7 @@ pages={706-719}
   journal =	 {International Sociology},
   volume =	 {20},
   number =	 {2},
-  Month =	 {June},
+  Month =	 6,
   pages =	 {133--152},
   year =	 {2005}
 }
@@ -14399,7 +14402,7 @@ pages={706-719}
   journal =	 {American Political Science Review},
   volume =	 {89},
   number =	 {2},
-  Month =	 {June},
+  Month =	 6,
   pages =	 {471--474},
   year =	 {1995}
 }
@@ -14622,7 +14625,7 @@ pages={706-719}
   volume =	 {62},
   year =	 {2000},
   pages =	 {387--413},
-  month =	 {May},
+  month =	 5,
   number =	 {2}
 }
 @article{BraOhr99,
@@ -14661,7 +14664,7 @@ pages={706-719}
   volume =	 {43},
   year =	 {1999},
   pages =	 {213-264},
-  month =	 {June},
+  month =	 6,
   number =	 {2}
 }
 @article{BreKerPet03,
@@ -14682,7 +14685,7 @@ pages={706-719}
   volume =	 {33},
   year =	 {2005},
   pages =	 {672--699},
-  month =	 {September},
+  month =	 9,
   number =	 {5}
 }
 @article{Buthe02,
@@ -14693,7 +14696,7 @@ pages={706-719}
   volume =	 {96},
   year =	 {2002},
   pages =	 {481--493},
-  month =	 {September},
+  month =	 9,
   number =	 {3}
 }
 
@@ -14716,7 +14719,7 @@ pages={706-719}
   volume =	 {89},
   year =	 {1995},
   pages =	 {457--460},
-  month =	 {June},
+  month =	 6,
   number =	 {2}
 }
 @article{ChiRot03,
@@ -14726,7 +14729,7 @@ pages={706-719}
   volume =	 {47},
   year =	 {2003},
   pages =	 {503--522},
-  month =	 {July},
+  month =	 7,
   number =	 {3}
 }
 @article{ClaGilGol06,
@@ -14757,7 +14760,7 @@ pages={706-719}
   volume =	 {89},
   year =	 {1995},
   pages =	 {461--466},
-  month =	 {June},
+  month =	 6,
   number =	 {2}
 }
 @article{Denrell03,
@@ -14799,7 +14802,7 @@ pages={706-719}
   volume =	 {2},
   year =	 {2002},
   pages =	 {1--34},
-  month =	 {November},
+  month =	 11,
   number =	 {4}
 }
 @article{DeSoysa02b,
@@ -14819,7 +14822,7 @@ pages={706-719}
   volume =	 {43},
   year =	 {1999},
   pages =	 {675--704},
-  month =	 {December},
+  month =	 12,
   number =	 {6}
 }
 @article{Dorussen01,
@@ -14851,7 +14854,7 @@ pages={706-719}
   volume =	 {98},
   year =	 {2004},
   pages =	 {671--686},
-  month =	 {November},
+  month =	 11,
   number =	 {4}
 }
 @article{Elgie04,
@@ -14879,8 +14882,8 @@ pages={706-719}
   volume =	 {43},
   year =	 {1999},
   pages =	 {315--339},
-  month =	 {June},
-  number =	 {June}
+  month =	 6,
+  number =	 6
 }
 @article{Forster98,
   author =	 {Anthony Forster},
@@ -14890,7 +14893,7 @@ pages={706-719}
   volume =	 {36},
   year =	 {1998},
   pages =	 {347--368},
-  month =	 {September},
+  month =	 9,
   number =	 {3}
 }
 @article{Fricke03,
@@ -14900,7 +14903,7 @@ pages={706-719}
   volume =	 {29},
   year =	 {2003},
   pages =	 {470--479},
-  month =	 {September},
+  month =	 9,
   number =	 {3}
 }
 @article{From02,
@@ -14924,7 +14927,7 @@ pages={706-719}
   volume =	 {34},
   year =	 {2005},
   pages =	 {567--572},
-  month =	 {November},
+  month =	 11,
   number =	 {7}
 }
 
@@ -15004,7 +15007,7 @@ pages={706-719}
   volume =	 {45},
   year =	 {2001},
   pages =	 {794--817},
-  month =	 {December},
+  month =	 12,
   number =	 {6}
 }
 
@@ -15035,7 +15038,7 @@ pages={706-719}
   volume =	 {51},
   year =	 {2007},
   pages =	 {688--701},
-  month =	 {July},
+  month =	 7,
   number =	 {3}
 }
 
@@ -15046,7 +15049,7 @@ pages={706-719}
   volume =	 {98},
   year =	 {2004},
   pages =	 {341--354},
-  month =	 {May},
+  month =	 5,
   number =	 {2}
 }
 
@@ -15077,7 +15080,7 @@ pages={706-719}
   volume =	 {9},
   year =	 {2002},
   pages =	 {873--893},
-  month =	 {December},
+  month =	 12,
   number =	 {6}
 }
 
@@ -15118,7 +15121,7 @@ pages={706-719}
   volume =	 {36},
   year =	 {2003},
   pages =	 {432--466},
-  month =	 {May},
+  month =	 5,
   number =	 {4}
 }
 @article{Grendstad99,
@@ -15173,7 +15176,7 @@ pages={706-719}
   volume =	 {30},
   year =	 {1998},
   pages =	 {443--461},
-  month =	 {September},
+  month =	 9,
   number =	 {4}
 }
 
@@ -15198,7 +15201,7 @@ pages={706-719}
                   2003},
   year =	 {2003},
   pages =	 {},
-  month =	 {September}
+  month =	 9
 }
 
 @article{Haverland06,
@@ -15253,7 +15256,7 @@ pages={706-719}
   volume =	 {6},
   year =	 {2003},
   pages =	 {372--389},
-  month =	 {December},
+  month =	 12,
   number =	 {4}
 }
 @article{HesLea97,
@@ -15334,7 +15337,7 @@ pages={706-719}
   volume =	 {1},
   year =	 {1997},
   note =	 {{http://eiop.or.at/eiop/texte/1997-008a.htm}},
-  month =	 {April},
+  month =	 4,
   number =	 {8}
 }
 @article{HowPerVil04,
@@ -15432,7 +15435,7 @@ pages={706-719}
   title =	 {Gasto en el Sector Salud},
   journal =	 {Nota Informativa},
   volume =	 {64},
-  month =	 {September},
+  month =	 9,
   year =	 {2006},
 }
 
@@ -15449,7 +15452,7 @@ pages={706-719}
   title =	 {The Expert Mind},
   journal =	 {Scientific American},
   year =	 {2006},
-  month =	 {August},
+  month =	 8,
   note =	 {{http://www.sciam.com/article.cfm?id=the-expert-mind}}
 }
 
@@ -15859,7 +15862,7 @@ pages =	 {186-200}
   school =	 {Harvard University},
   year =	 {2008},
   OPTaddress =	 {},
-  month =	 {May},
+  month =	 5,
 }
 
 @Article{Moore08b,
@@ -16119,7 +16122,7 @@ pages =	 {186-200}
   year =	 {2001},
   volume =	 {95},
   number =	 {3},
-  month =	 {September},
+  month =	 9,
   pages =	 {529--546}
 }
 
@@ -16179,7 +16182,7 @@ pages =	 {186-200}
   journal =	 {American Political Science Review},
   year =	 {2000},
   pages =	 {251--268},
-  month =	 {June}
+  month =	 6
 }
 @article{Mahoney99,
   author =	 {James Mahoney},
@@ -16211,7 +16214,7 @@ pages =	 {186-200}
   volume =	 {43},
   year =	 {1977},
   pages =	 {430--451},
-  month =	 {April},
+  month =	 4,
   number =	 {3}
 }
 
@@ -16236,7 +16239,7 @@ pages =	 {186-200}
   volume =	 {90},
   year =	 {1996},
   pages =	 {605--618},
-  month =	 {September},
+  month =	 9,
   number =	 {3}
 }
 
@@ -16258,7 +16261,7 @@ pages =	 {186-200}
   volume =	 {99},
   year =	 {2005},
   pages =	 {435--452},
-  month =	 {August},
+  month =	 8,
   number =	 {3}
 }
 
@@ -16443,7 +16446,7 @@ pages =	 {186-200}
   volume =	 44,
   number =	 4,
   pages =	 {844--858},
-  month =	 {October}
+  month =	 10
 }
 
 @techreport{GlyQui08,
@@ -16560,7 +16563,7 @@ pages =	 {186-200}
   volume =	 34,
   number =	 1,
   pages =	 {67-81},
-  month =	 {June}
+  month =	 6
 }
 
 @TechReport{SSAHist07,
@@ -16652,7 +16655,7 @@ pages =	 {186-200}
   year =	 2006,
   volume =	 368,
   pages =	 {666-678},
-  month =	 {August}
+  month =	 8
 }
 
 @Article{FleGraWil07,
@@ -16693,7 +16696,7 @@ pages =	 {186-200}
   volume =	 34,
   number =	 7,
   pages =	 {1586-1592},
-  month =	 {July}
+  month =	 7
 }
 
 @Book{Quetelet1842,
@@ -17621,7 +17624,7 @@ pages =	 {186-200}
   year =	 2002,
   volume =	 296,
   pages =	 {1029-1031},
-  month =	 {May}
+  month =	 5
 }
 
 @Article{HorWil98,
@@ -17633,7 +17636,7 @@ pages =	 {186-200}
   volume =	 35,
   number =	 4,
   pages =	 {391-412},
-  month =	 {November}
+  month =	 11
 }
 
 @Article{PreWan06,
@@ -17645,7 +17648,7 @@ pages =	 {186-200}
   volume =	 43,
   number =	 4,
   pages =	 {631-646},
-  month =	 {November}
+  month =	 11
 }
 
 @article{Finkel85,
@@ -17776,7 +17779,7 @@ pages =	 {186-200}
   volume =	 31,
   number = 	 2,
   pages = 	 {259-292},
-  month = 	 {June}
+  month = 	 6
 }
 
 @Article{MehCha09,
@@ -18154,7 +18157,7 @@ address = {Chicago, IL}
   volume =	 4,
   number =	 11,
   pages =	 {1739--1753},
-  month =	 {November}
+  month =	 11
 }
 
 @Article{CurDurEil04,
@@ -18214,7 +18217,7 @@ address = {Chicago, IL}
   journal =	 {Journal of Perinatology},
   year =	 2008,
   pages =	 {1--8},
-  month =	 {December}
+  month =	 12
 }
 
 @TechReport{LeeAndTul03,
@@ -18238,7 +18241,7 @@ address = {Chicago, IL}
   title = 	 {Uncertainty in Social Security's Long-Term Finances: A Stochastic Analysis},
   institution =  {Congressional Budget Office},
   year = 	 2001,
-  month =	 {December}
+  month =	 12
 }
 
 @TechReport{BurMan03,
@@ -18617,7 +18620,7 @@ address = {Chicago, IL}
   volume =	 104,
   number =	 486,
   pages =	 {1--12},
-  month =	 {June}
+  month =	 6
 }
 
 @article{SchGer97,
@@ -18664,7 +18667,7 @@ address = {Chicago, IL}
                   Comparative Manifesto Project Codings},
   note =	 {Paper presented at the Midwest Political Science
                   Association, Chicago},
-  month =	 {April},
+  month =	 4,
   year =	 2008
 }
 
@@ -19198,7 +19201,7 @@ address = {Chicago, IL}
   volume =	 55,
   number =	 2,
   pages =	 {365--381},
-  month =	 {May}
+  month =	 5
 }
 
 @Article{KatKat10,
@@ -19220,7 +19223,7 @@ address = {Chicago, IL}
   year =	 2010,
   volume =	 54,
   number =	 2,
-  month =	 {April},
+  month =	 4,
   pages =	 {{543--560}}
 }
 
@@ -19257,7 +19260,7 @@ address = {Chicago, IL}
   volume =	 29,
   number =	 19,
   pages =	 {1964-1976},
-  month =	 {August}
+  month =	 8
 }
 
 @Article{Rubin08,
@@ -19459,7 +19462,7 @@ address = {Chicago, IL}
                   Medicare: 18-Month Interim Analysis},
   journal =	 {Report to Congress},
   year =	 2008,
-  month =	 {October},
+  month =	 10,
   note =	 {CMS Contract No. 500-00-0022}
 }
 
@@ -19493,7 +19496,7 @@ address = {Chicago, IL}
                   spending from 1987 to 2006}},
   author =	 {Thorpe, K.E. and Ogden, L.L. and Galactionova, K.},
   journal =	 {Health Affairs},
-  month =	 {April},
+  month =	 4,
   volume =	 29,
   number =	 4,
   year =	 {2010}
@@ -19650,7 +19653,7 @@ pages = {286-298},
 author = {Friedrich Leisch},
 title = {Bagged Clustering},
 howpublished = {Working Paper 51, Adaptive Information Systems and Modelling in Economics and Management Science},
-month = {August},
+month = 8,
 year = {1999},
 }
 
@@ -19688,7 +19691,7 @@ year = {1959},
   year = 	 1959,
   volume =	 2,
   pages =	 {19-20},
-  month =	 {April}
+  month =	 4
 }
 
 @Article{ReuBonWil08,
@@ -19965,7 +19968,7 @@ journal = {Science}
   volume =	 101,
   number =	 476,
   pages =	 {1398--1407},
-  month =	 {December}
+  month =	 12
 }
 
 @article{HalStu95,
@@ -20568,7 +20571,7 @@ journal = {Science}
                   Components of Dyadic Dependence in International
                   Conflict}},
   year =         2008,
-  month =        {May},
+  month =        5,
   institution =  {UCSD},
   type =         {Working Papers}
 }
@@ -20871,7 +20874,7 @@ journal = {Science}
   author = {Scott Jaschik},
   title={{Rise in Distance Enrollments}},
   journal={{Insider Higher Education}},
-  month={April},
+  month=4,
   year={2009},
   url = {http://www.insidehighered.com/news/2009/04/06/distance},
 }
@@ -20891,7 +20894,7 @@ journal = {Science}
   author = {Pam Belluck},
   title={{Harvard, for Less: Extension Courses' New Allure}},
   journal={{New York Times}},
-  month={November},
+  month=11,
   year={2005},
   url = {http://www.nytimes.com/2005/11/18/national/18harvard.html},
 }
@@ -20902,7 +20905,7 @@ journal = {Science}
   title={{Online Education Venture Lures Cash Infusion and Deals With 5 Top Universities}},
   journal={{New York Times}},
   pages={B4},
-  month={April},
+  month=4,
   year={2012},
   url = {http://www.nytimes.com/2012/04/18/technology/coursera-plans-to-announce-university-partners-for-online-classes.html},
 }
@@ -20919,7 +20922,7 @@ journal = {Science}
   author = {Tanzina Vega and J. Peters},
   title={{Audio Pioneer Buys Newsweek}},
   journal={{New York Times}},
-  month={August},
+  month=8,
   year={2010},
   pages={B1},
   url = {http://www.nytimes.com/2010/08/03/business/media/03newsweek.html},
@@ -20929,7 +20932,7 @@ journal = {Science}
   author = {Andrew Clark},
   title={{US Tycoon Sidney Harman Buys Newsweek 'For a Dollar'}},
   journal={{The Guardian}},
-  month={August},
+  month=8,
   year={2010},
   url = {http://www.guardian.co.uk/media/2010/aug/03/sidney-harman-buys-newsweek-magazine},
 }
@@ -21269,7 +21272,7 @@ author = {{U.S. Department of Education}},
   title={Freakonomics: A Star Is Made},
   author={Stephen J. Dubner and Steven D. Levitt},
   journal={New York Times Magazine},
-  month={May},
+  month=5,
   year={2006},
 }
 
@@ -21692,7 +21695,7 @@ China},
 	author={Carlos Caceres and Bent Nielsen},
 	title={Asymptotic Properties of White's Test for Heteroskedasticity},
 	year={2006},
-	month={April}
+	month=4
 }
 
 @book{Xi12,
@@ -21813,7 +21816,7 @@ author = {{National Center for Education Statistics}},
   author = {Steve Kolowich},
   title={{The Problem Solvers}},
   journal={{Inside Higher Ed}},
-  month={December},
+  month=12,
   year={2011},
   url = {{http://www.insidehighered.com/news/2011/12/07/khan-academy-ponders-what-it-can-teach-higher-education-establishment}},
 }
@@ -21823,7 +21826,7 @@ author = {{National Center for Education Statistics}},
   author = {Somini Sengupta},
   title={{Grading the Digital School: Online Learning, Personalized}},
   journal={{New York Times}},
-  month={December},
+  month=12,
   year={2011},
   url = {http://www.nytimes.com/2011/12/05/technology/khan-academy-blends-its-youtube-approach-with-classrooms.html},
 }
@@ -23721,7 +23724,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   Propagandists},
   author =       {Oiwan Lam},
   journal =      {Global Voices},
-  volume =       {October},
+  volume =       10,
   year =         {2013},
 }
 
