--- a/gk.bib
+++ b/gk.bib
@@ -25867,7 +25867,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{EnoFow16,
   author =       {Enos, Ryan and Fowler, Anthony},
   title =        {Aggregate Effects of Large-Scale Campaigns on Voter
-                  Turnout*},
+                  Turnout},
   journal =      {Political Science Research and Methods},
   volume =       {21},
   year =         {2016},
@@ -25876,8 +25876,8 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 
 @techreport{TaySteWoo11,
-  author =       { Taylor, Bruce and Stein, Nan, and Woods, Dan and
-                  Mumford, Elizabeth },
+  author =       {Taylor, Bruce and Stein, Nan, and Woods, Dan and
+                  Mumford, Elizabeth},
   title =        {Shifting Boundaries: Final Report on an Experimental
                   Evaluation of a Youth Dating Violence Prevention
                   Program in New York City Middle Schools },
