--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1,4 +1,3 @@
-
 % A bibtex-format file for papers by or coauthored with Gary King
 %
 % rules used for abbreviations:
@@ -644,7 +643,7 @@ pages={1037--1060},
   volume =	 {51},
   year =	 {2007},
   pages =	 {231-241},
-  month =	 {March},
+  month =	 3,
   note =         {{http://gking.harvard.edu/files/abs/counterf-abs.shtml}}
 }
 
@@ -682,7 +681,7 @@ pages={1037--1060},
   volume =	 43,
   year =	 2006,
   pages =	 {569--585},
-  month =	 {August},
+  month =	 8,
   number =	 3,
   note =         {{http://gking.harvard.edu/files/abs/deathbys-abs.shtml}}
 }
@@ -695,7 +694,7 @@ pages={1037--1060},
   year =	 {2010},
   volume =	 {54},
   number =	 {2},
-  month =	 {April},
+  month =	 4,
   pages =	 {561--581},
   note =	 {{http://gking.harvard.edu/files/abs/pr-abs.shtml}}
 }
@@ -707,7 +706,7 @@ pages={1037--1060},
   volume =	 {39},
   year =	 {2006},
   pages =	 {119--125},
-  month =	 {January},
+  month =	 1,
   number =	 {01},
   note =
                   {{http://gking.harvard.edu/files/abs/paperspub-abs.shtml}}
@@ -752,7 +751,7 @@ pages={1037--1060},
   volume =	 {80},
   year =	 {2005},
   pages =	 {1--116},
-  month =	 {April},
+  month =	 4,
   number =	 {1},
   note =	 {{http://gking.harvard.edu/files/abs/crisis-abs.shtml}}
 }
@@ -775,7 +774,7 @@ pages={1037--1060},
   volume =	 {98},
   year =	 {2004},
   pages =	 {379-389},
-  month =	 {May},
+  month =	 5,
   number =	 {2},
   note =
                   {{http://gking.harvard.edu/files/abs/toe-resp-abs.shtml}}
@@ -806,7 +805,7 @@ pages={1037--1060},
   volume =	 {32},
   year =	 {2004},
   pages =	 {54-87},
-  month =	 {August},
+  month =	 8,
   number =	 {1},
   note =	 {{http://gking.harvard.edu/files/abs/help-abs.shtml}}
 }
@@ -819,7 +818,7 @@ pages={1037--1060},
   volume =	 {2},
   year =	 {2004},
   pages =	 {537--549},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =
                   {{http://gking.harvard.edu/files/abs/ballots-abs.shtml}}
@@ -938,7 +937,7 @@ pages={1037--1060},
   volume =	 {4},
   year =	 {2003},
   pages =	 {443--499},
-  month =	 {February},
+  month =	 2,
   number =	 1,
   note =
                   {{http://gking.harvard.edu/files/abs/replvdc-abs.shtml}}
@@ -953,7 +952,7 @@ pages={1037--1060},
   volume =	 {57},
   year =	 {2003},
   pages =	 {617-642},
-  month =	 {July},
+  month =	 7,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/infoex-abs.shtml}}
 }
@@ -967,7 +966,7 @@ pages={1037--1060},
   volume =	 {98},
   year =	 {2004},
   pages =	 {191--207},
-  month =	 {February},
+  month =	 2,
   number =	 {1},
   note =	 {{http://gking.harvard.edu/files/abs/vign-abs.shtml}}
 }
@@ -1057,7 +1056,7 @@ pages={1037--1060},
                   Health},
   volume =	 {1},
   year =	 2002,
-  month =	 {August},
+  month =	 8,
   number =	 3,
   note =	 {{http://gking.harvard.edu/files/abs/ebb-abs.shtml}}
 }
@@ -1108,7 +1107,7 @@ pages={1037--1060},
   volume =	 53,
   year =	 2002,
   pages =	 {623--658},
-  month =	 {July},
+  month =	 7,
   number =	 4 ,
   note =	 {{http://gking.harvard.edu/files/abs/civil-abs.shtml}}
 }
@@ -1253,7 +1252,7 @@ pages={1037--1060},
   volume =	 94,
   year =	 2000,
   pages =	 {21--36},
-  month =	 {March},
+  month =	 3,
   number =	 1 ,
   note =	 {{http://gking.harvard.edu/files/abs/improv-abs.shtml}}
 }
@@ -1265,7 +1264,7 @@ pages={1037--1060},
   volume =	 {90},
   year =	 {2000},
   pages =	 {601--606},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/geog-abs.shtml}}
 }
@@ -1291,7 +1290,7 @@ pages={1037--1060},
   volume =	 93,
   year =	 1999,
   pages =	 {846--857},
-  month =	 {September},
+  month =	 9,
   number =	 433 ,
   note =	 {{http://gking.harvard.edu/files/abs/not-abs.shtml}}
 }
@@ -1303,7 +1302,7 @@ pages={1037--1060},
   volume =	 93,
   year =	 1999,
   pages =	 {869--874},
-  month =	 {September},
+  month =	 9,
   number =	 433 ,
   note =	 {{http://gking.harvard.edu/files/abs/not-abs.shtml}}
 }
@@ -1315,7 +1314,7 @@ pages={1037--1060},
   volume =       93,
   year =         1999,
   pages =        {15--32},
-  month =        {March},
+  month =        3,
   number =       {1},
   url =          {bit.ly/mtypty}
 }
@@ -1328,7 +1327,7 @@ pages={1037--1060},
   volume =	 {94},
   year =	 {1999},
   pages =	 {352-355},
-  month =	 {March},
+  month =	 3,
   number =	 {445},
   note =	 {{http://gking.harvard.edu/files/abs/reply-abs.shtml}}
 }
@@ -1340,7 +1339,7 @@ pages={1037--1060},
   volume =	 {18},
   year =	 {1999},
   pages =	 {597--598},
-  month =	 {December},
+  month =	 12,
   number =	 {4},
   note =
                   {{http://gking.harvard.edu/files/abs/manypub-abs.shtml}}
@@ -1354,7 +1353,7 @@ pages={1037--1060},
   volume =	 28,
   year =	 1999,
   pages =	 {61--90},
-  month =	 {August},
+  month =	 8,
   number =	 1 ,
   note =	 {{http://gking.harvard.edu/files/abs/binom-abs.shtml}}
 }
@@ -1366,7 +1365,7 @@ pages={1037--1060},
   volume =	 {8},
   year =	 {1999},
   pages =	 {21--33},
-  month =	 {August},
+  month =	 8,
   number =	 {1},
   note =
                   {{http://gking.harvard.edu/files/abs/spatial-abs.shtml}}
@@ -1380,7 +1379,7 @@ pages={1037--1060},
   volume =	 {93},
   year =	 {1998},
   pages =	 {1--9},
-  month =	 {March},
+  month =	 3,
   number =	 {441},
   note =
                   {{http://gking.harvard.edu/files/abs/estimatprob-abs.shtml}}
@@ -1442,7 +1441,7 @@ pages={1037--1060},
   volume =	 {15},
   year =	 {1996},
   pages =	 {159--164},
-  month =	 {February},
+  month =	 2,
   number =	 {2},
   note =	 {{http://gking.harvard.edu/files/abs/contxt-abs.shtml}}
 }
@@ -1466,7 +1465,7 @@ pages={1037--1060},
   volume =	 {28},
   year =	 1995,
   pages =	 {443--499},
-  month =	 {September},
+  month =	 9,
   number =	 3,
   note =	 {{http://j.mp/jCyfF1}}
 }
@@ -1478,7 +1477,7 @@ pages={1037--1060},
   volume =	 {XXVIII},
   year =	 1995,
   pages =	 {494--499},
-  month =	 {September},
+  month =	 9,
   number =	 3,
   note =
                   {{http://gking.harvard.edu/files/abs/replication-abs.shtml}}
@@ -1492,7 +1491,7 @@ pages={1037--1060},
   volume =	 {89},
   year =	 {1995},
   pages =	 {454--481 },
-  month =	 {June},
+  month =	 6,
   number =	 {2},
   note =
                   {{http://gking.harvard.edu/files/abs/kkvresp-abs.shtml}}
@@ -1532,7 +1531,7 @@ pages={1037--1060},
   volume =	 {27},
   year =	 {1994},
   pages =	 {190--210},
-  month =	 {July},
+  month =	 7,
   number =	 {2},
   note =
                   {{http://gking.harvard.edu/files/abs/transfers-abs.shtml}}
@@ -1587,7 +1586,7 @@ pages={1037--1060},
   volume =	 23,
   year =	 1993,
   pages =	 {409--451},
-  month =	 {October},
+  month =	 10,
   number =	 1,
   note =
                   {{http://gking.harvard.edu/files/abs/variable-abs.shtml}}
@@ -1629,7 +1628,7 @@ pages={1037--1060},
   volume =	 {87},
   year =	 {1993},
   pages =	 {744--750},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/hoff-abs.shtml}}
 }
@@ -1642,7 +1641,7 @@ pages={1037--1060},
   volume =	 {8},
   year =	 {1993},
   pages =	 {397--401},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/good-abs.shtml}}
 }
@@ -1655,7 +1654,7 @@ pages={1037--1060},
   volume =	 {35},
   year =	 {1991},
   pages =	 {1047--1053},
-  month =	 {November},
+  month =	 11,
   number =	 {4},
   note =	 {{http://gking.harvard.edu/files/abs/truth-abs.shtml}}
 }
@@ -1667,7 +1666,7 @@ pages={1037--1060},
   volume =	 {21},
   year =	 {1991},
   pages =	 {119--128},
-  month =	 {January},
+  month =	 1,
   number =	 {1},
   note =
                   {{http://gking.harvard.edu/files/abs/constit-abs.shtml}}
@@ -1714,7 +1713,7 @@ pages={1037--1060},
   volume =       35,
   year =         1991,
   pages =        {110--138},
-  month =        {February},
+  month =        2,
   number =       1,
   url =          {bit.ly/SystCs}
 }
@@ -1727,7 +1726,7 @@ pages={1037--1060},
   volume =       {52},
   year =         {1990},
   pages =        {609--621},
-  month =        {May},
+  month =        5,
   number =       {2},
   url =          {bit.ly/DelSeln}
 }
@@ -1752,7 +1751,7 @@ pages={1037--1060},
   volume =	 {34},
   year =	 {1990},
   pages =	 {1142--1164},
-  month =	 {November},
+  month =	 11,
   number =	 {4},
   note =	 {{http://gking.harvard.edu/files/abs/inc-abs.shtml}}
 }
@@ -1766,7 +1765,7 @@ pages={1037--1060},
   volume =	 {34},
   year =	 {1990},
   pages =	 {846--871},
-  month =	 {August},
+  month =	 8,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/coal-abs.shtml}}
 }
@@ -1779,7 +1778,7 @@ pages={1037--1060},
   volume =       {XV},
   year =         {1990},
   pages =        {159--181},
-  month =        {May},
+  month =        5,
   number =       {2},
   url =          {bit.ly/ErespMP}
 }
@@ -1802,7 +1801,7 @@ pages={1037--1060},
   volume =	 {33},
   year =	 {1989},
   pages =	 {787--824},
-  month =	 {November},
+  month =	 11,
   number =	 {4},
   note =
                   {{http://gking.harvard.edu/files/abs/repstoch-abs.shtml}}
@@ -1816,7 +1815,7 @@ pages={1037--1060},
   volume =	 {33},
   year =	 {1989},
   pages =	 {123--147},
-  month =	 {June},
+  month =	 6,
   number =	 {2},
   note =	 {{http://gking.harvard.edu/files/abs/ISQ33-abs.shtml}}
 }
@@ -1829,7 +1828,7 @@ pages={1037--1060},
   volume =	 33,
   year =	 1989,
   pages =	 {762--784},
-  month =	 {August},
+  month =	 8,
   number =	 3 ,
   note =
                   {{http://gking.harvard.edu/files/abs/varspecec-abs.shtml}}
@@ -1842,7 +1841,7 @@ pages={1037--1060},
   volume =	 {17},
   year =	 {1989},
   pages =	 {235--255},
-  month =	 {February},
+  month =	 2,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/SMR17-abs.shtml}}
 }
@@ -1856,7 +1855,7 @@ pages={1037--1060},
   volume =	 32,
   year =	 1988,
   pages =	 {838-863},
-  month =	 {August},
+  month =	 8,
   number =	 3 ,
   note =	 {{http://gking.harvard.edu/files/abs/epr-abs.shtml}}
 }
@@ -1869,7 +1868,7 @@ pages={1037--1060},
   volume =       {9},
   year =         {1987},
   pages =        {305--322},
-  month =        {July},
+  month =        7,
   number =       {3},
   url =          {j.mp/parSym}
 }
@@ -1896,7 +1895,7 @@ pages={1037--1060},
   volume =	 {15},
   year =	 {1987},
   pages =	 {373--386},
-  month =	 {July},
+  month =	 7,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/sct-abs.shtml}}
 }
@@ -1909,7 +1908,7 @@ pages={1037--1060},
   volume =	 {30},
   year =	 {1986},
   pages =	 {666--687},
-  month =	 {August},
+  month =	 8,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/mist-abs.shtml}}
 }
@@ -1922,7 +1921,7 @@ pages={1037--1060},
   volume =	 {15},
   year =	 {1986},
   pages =	 {135--152},
-  month =	 {June},
+  month =	 6,
   note =	 {{http://gking.harvard.edu/files/abs/SSR15-abs.shtml}}
 }
 
@@ -1934,7 +1933,7 @@ pages={1037--1060},
   volume =	 {7},
   year =	 {1986},
   pages =	 {83--101},
-  month =	 {March},
+  month =	 3,
   number =	 {1},
   note =	 {{http://gking.harvard.edu/files/abs/PP7-abs.shtml}}
 }
@@ -1947,7 +1946,7 @@ pages={1037--1060},
   volume =	 {67},
   year =	 {1986},
   pages =	 {473--490},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =
                   {{http://gking.harvard.edu/files/abs/poliactiv-abs.shtml}}
