--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -121,12 +121,12 @@
   OPTannote =    {}
 }
 
-@Article{IacKinPor17,
+@Article{IacKinPor18, 
   author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =        {A Theory of Statistical Inference for Matching
                   Methods in Causal Research},
-  journal =      { },
-  year =         {2017},
+  journal =      {Political Analysis},
+  year =         {In Press},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
@@ -972,12 +972,16 @@ pages={1037--1060},
 }
 
 @article{KinRosTan07,
-  author =	 {Gary King and Ori Rosen and Martin Tanner and
-                  Alexander F. Wagner.},
-  title =	 {Ordinary Economic Voting Behavior in the
-                  Extraordinary Election of Adolf Hitler},
-  year =	 {2007},
-  note =	 {{http://gking.harvard.edu/files/abs/naziV-abs.shtml}}
+  title =        {Ordinary economic voting behavior in the
+                  extraordinary election of Adolf Hitler},
+  author =       {King, Gary and Rosen, Ori and Tanner, Martin and
+                  Wagner, Alexander F},
+  journal =      {The Journal of Economic History},
+  volume =       {68},
+  number =       {4},
+  pages =        {951--996},
+  url =          {bit.ly/nazivote},
+  year =         {2008}
 }
 
 @inbook{KinZen03,
