--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2574,4 +2574,13 @@ pages={1037--1060},
                   and Timothy Wilson}
 }
 
+@InCollection{Butler51,
+  author =       {David E Butler},
+  title =        {Appendix},
+  booktitle =    {The British General Election of 1950},
+  publisher =    {Macmillan},
+  year =         1951,
+  editor =       {HG Nicholas},
+  address =      {London}
+}
 
