--- a/gk.bib
+++ b/gk.bib
@@ -25944,3 +25944,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         2014,
   howpublished = {NBER}
 }
+@incollection{Petracca96,
+  title =        {A history of rotation in office},
+  author =       {Petracca, Mark P},
+  booktitle =    {Legislative Term Limits: Public Choice Perspectives},
+  pages =        {247--277},
+  year =         {1996},
+  publisher =    {Springer}
+}
