--- a/gk.bib
+++ b/gk.bib
@@ -25952,3 +25952,22 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1996},
   publisher =    {Springer}
 }
+@article{Wang16b,
+  title =        {Three Practical Tests for Gerrymandering:
+                  Application to Maryland and Wisconsin},
+  author =       {Wang, Samuel S-H},
+  journal =      {Election Law Journal},
+  volume =       {15},
+  number =       {4},
+  pages =        {367--384},
+  year =         {2016}
+}
+@article{Wang16,
+  title =        {Three tests for practical evaluation of partisan
+                  gerrymandering},
+  author =       {Wang, Samuel S-H},
+  journal =      {Stanford Law Review},
+  volume =       {68},
+  pages =        {1263},
+  year =         {2016}
+}
