--- a/gk.bib
+++ b/gk.bib
@@ -25971,3 +25971,13 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1263},
   year =         {2016}
 }
+@article{Tufte73,
+  title =        {The relationship between seats and votes in
+                  two-party systems},
+  author =       {Tufte, Edward R},
+  journal =      {American Political Science Review},
+  volume =       {67},
+  number =       {2},
+  pages =        {540--554},
+  year =         {1973}
+}
